--- a/1.TwoSum.md
+++ b/1.TwoSum.md
@@ -1,5 +1,6 @@
 [1. TwoSum](https://leetcode.com/problems/two-sum/)
 ## Code
+```Python
 class Solution:
     def twoSum(self, nums, target):
         """
@@ -14,3 +15,4 @@ class Solution:
                 return [hashmap[another_num], index]
             hashmap[num] = index
         return None
+```
