--- a/989.md
+++ b/989.md
@@ -17,5 +17,5 @@ class Solution(object):
         return num
 ```
 ## 复杂度分析
-时间复杂度：O（N），需要遍历一遍数组，故为N
+时间复杂度：O（N^2），需要遍历一遍数组 N，再数组前添加元素为N
 空间复杂度：O（1），不需要额外开辟空间
